tests/snapshots/examples_fixtures/aoc__2024__day01.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/day01.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2024/day01.flx:24:8
   |
24 |     |> map(/t -> parse_int(t))
   |        ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2024/day01.flx:32:8
   |
32 |     |> map(/s -> parse_pair(s))
   |        ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2024/day01.flx:41:8
   |
41 |     |> fold(0, /(acc, p) -> acc + abs(p.0 - p.1))
   |        ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2024/day01.flx:42:34
   |
42 |     where left  = day_pairs_a |> map(/p -> p.0) |> sort_by(/x -> x)
   |                                  ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2024/day01.flx:43:34
   |
43 |     where right = day_pairs_a |> map(/p -> p.1) |> sort_by(/x -> x)
   |                                  ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2024/day01.flx:53:8
   |
53 |     |> fold(0, /(acc, x) -> {
   |        ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2024/day01.flx:56:34
   |
56 |     where left  = day_pairs_b |> map(/p -> p.0)
   |                                  ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2024/day01.flx:59:8
   |
59 |     |> fold({}, /(m, x) -> match Map.get(m, x) {
   |        ^^^^

Hint:
  Define it first: let fold = ...;

Found 8 errors.
== stdout ==
<not executed>
